<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            >

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:text="@string/useractivity_button1"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:text="@string/useractivity_button2"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:text="@string/useractivity_button3"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:text="@string/useractivity_button4"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:text="@string/useractivity_button5"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:text="@string/useractivity_button6"
                android:textSize="25sp"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>